# br-startup-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  HANDOVER.md  LEARNINGS.md  pyproject.toml
.claude/rules/: fractal-nav.md
.fractal/mcp-startup-vc/: discovery.md  learnings.md  root.md
.fractal/mcp-startup-vc/arquitetura-mcp/: conclusion.md  discovery.md  predicate.md
.fractal/mcp-startup-vc/arquitetura-mcp/casos-uso-vc/: conclusion.md  discovery.md  execution.md  plan.md  prd.md  predicate.md  results.md  review.md  test-checklist.md
.fractal/mcp-startup-vc/dados-reais-via-mcp/: discovery.md  predicate.md
.fractal/mcp-startup-vc/dados-reais-via-mcp/pipeline-cnpj-receita/: conclusion.md  discovery.md  execution.md  plan.md  prd.md  predicate.md  results.md  review.md  test-checklist.md
.fractal/mcp-startup-vc/dados-reais-via-mcp/pipeline-crunchbase/: conclusion.md  predicate.md
.fractal/mcp-startup-vc/dados-reais-via-mcp/pipeline-gov-aberto/: conclusion.md  discovery.md  execution.md  plan.md  prd.md  predicate.md  results.md  review.md  test-checklist.md
.fractal/mcp-startup-vc/fontes-dados-startups/: conclusion.md  discovery.md  execution.md  plan.md  prd.md  predicate.md  results.md  review.md  test-checklist.md
docs/: architecture.md  data-sources.md  early-stage-sources.md  vc-use-cases.md
src/br_startup_mcp/: __init__.py  __main__.py  server.py
src/br_startup_mcp/data/: __init__.py  bndes.py  cnpj.py  crunchbase.py  cvm.py
src/br_startup_mcp/models/: entities.py
src/br_startup_mcp/tools/: crunchbase.py  regulatory.py  startup.py
