[project]
name = "br-startup-mcp"
version = "0.1.0"
description = "MCP server for Brazilian startup data (CVM, BNDES)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "duckdb>=0.10.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
br-startup-mcp = "br_startup_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/br_startup_mcp"]
